[project]
name = "visualization-of-holomorphic-functions"
version = "0.1.0"
description = "Visualization of Holomorphic Functions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorspacious>=1.1.2",
    "jupyterlab>=4.4.10",
    "marimo>=0.17.6",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "ruff>=0.14.3",
]
